--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,8 @@ dependencies:
   url_launcher: ^6.0.10
   camera: ^0.9.8+1
   image: ^3.0.3
+  tflite_flutter: ^0.9.0
+  tflite_flutter_helper: ^0.3.1
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.3
