--- a/.gitignore
+++ b/.gitignore
@@ -87,3 +87,5 @@ lib/generated_plugin_registrant.dart
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
 
 # End of https://www.toptal.com/developers/gitignore/api/flutter
+scripts/species/training/model_2.tflite
+*.h5
