--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "python.pythonPath": "/Users/amarok/src/natur-i-norge/ninEnv/bin/python3"
+    "python.pythonPath": "/Users/amarok/src/natur-i-norge/ninEnv/bin/python3",
+    "cSpell.words": [
+        "keras"
+    ]
 }
