--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.3
   collection: ^1.15.0
+  flutter_speed_dial: ^6.0.0
 dependency_overrides:
   camera: ^0.9.8+1
 dev_dependencies:
