--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   toggle_switch: ^1.2.0
   uuid: ^3.0.4
   url_launcher: ^6.0.10
+  filter_list: ^1.0.2
   camera: ^0.9.8+1
   image: ^3.0.3
   tflite_flutter: ^0.9.0
