Fix ios permissions

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -47,5 +47,9 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>Species recognition</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Species recognition</string>
 </dict>
 </plist>
